# libadsprpc

./: configure.ac  meson.build
inc/: fastrpc_internal.h
include/: fastrpc_internal.h  mod_table_imp.h
src/: fastrpc_apps_user.c  rpcmem.c
src/lib/: Makefile.am  fastrpc_apps_user.c  meson.build  rpcmem.c
src/utils/: Makefile.am  adsprpcd.c  meson.build
